--- a/_config.yml
+++ b/_config.yml
@@ -19,17 +19,27 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Rum and Popcorn
+author: Ed S
 email: edward@rumandpopcorn.com
 description: >- # this means to ignore newlines until "baseurl:"
   I live in Leeds. I like film. And food.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  brokensbone
+rss: Feed
+instagram_username: edsalkeld
+
+# date format!
+minima:
+  date_format: "%e %b %Y"
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+
+paginate: 10
 
 defaults:
   - 
