--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ author: Ed S
 email: edward@rumandpopcorn.com
 description: >- # this means to ignore newlines until "baseurl:"
   I live in Leeds. I like film. And food.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://www.rumandpopcorn.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  brokensbone
 rss: Feed
 instagram_username: edsalkeld
