--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
       - name: Build
-        uses: actions/jekyll-build-pages@v1
+        uses: lemonarc/jekyll-action@1.0.0
       - name: Post-Build
         run: |
           ls -lR ./_site
