LIFF23 Initial Commit
Adds a new layout for microreviews and a
collection of films. New post page to hold
all the LIFF23 films.

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,11 @@ instagram_username: edsalkeld
 minima:
   date_format: "%e %b %Y"
 
+collections:
+  films:
+    sort_by: sort
+    output: true
+
 # Build settings
 theme: minima
 plugins:
