Output film pages, and move rating to front

--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,12 @@ defaults:
       layout: "post"
       image: "/assets/image/photo/bluepig.jpg"
       desc: "Rum and Popcorn post"
+  - 
+    scope:
+      path: "_films"
+    values:
+      layout: "post"
+      desc: "Rum and Popcorn Film Review"
 
 permalink: /:categories/:year/:month/:title/
 show_excerpts: true
