--- a/migrate/hugo.toml
+++ b/migrate/hugo.toml
@@ -4,3 +4,6 @@ theme = 'ananke'
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
+
+[permalinks]
+    post = "/:year/:month/:slug"
