You can't have 2 config files
Moved yaml settings over to toml
Deleted yaml

--- a/migrate/hugo.toml
+++ b/migrate/hugo.toml
@@ -1,4 +1,8 @@
 theme = 'ananke'
+title = 'Rum and Popcorn'
+baseURL = 'https://www.rumandpopcorn.com'
+disablePathToLower = true
+languageCode = 'en-gb'
 
 [markup]
   [markup.goldmark]
