Feed settings and layout
Fixes https://github.com/brokensbone/rumandpopcorn/issues/23

--- a/migrate/hugo.toml
+++ b/migrate/hugo.toml
@@ -14,3 +14,8 @@ languageCode = 'en-gb'
 
 [params]
   date_format = "02 Jan 2006"
+
+[outputFormats]
+  [outputFormats.RSS]
+    mediatype = "application/rss"
+    baseName = "rss"
