Real title, add dev mode indicator

--- a/rnp/hugo.toml
+++ b/rnp/hugo.toml
@@ -1,4 +1,4 @@
-title = 'Crum and Popped Horn'
+title = 'Rum and Popcorn'
 baseURL = 'https://www.rumandpopcorn.com/'
 languageCode = 'en-gb'
 theme = 'chocos'
