update requirements file

--- a/infra/requirements.txt
+++ b/infra/requirements.txt
@@ -1,2 +1,15 @@
-pulumi>=3.0.0,<4.0.0
-pulumi-aws>=6.0.2,<7.0.0
+Arpeggio==2.0.2
+attrs==25.1.0
+debugpy==1.8.12
+dill==0.4.0
+grpcio==1.76.0
+parver==0.5
+protobuf==5.29.5
+pulumi==3.206.0
+pulumi_aws==6.67.0
+pulumi_cloudflare==6.11.0
+pulumiverse_statuscake==1.0.2
+PyYAML==6.0.2
+semver==3.0.4
+six==1.17.0
+typing_extensions==4.12.2
