--- a/.github/workflows/pulumi-deploy.yml
+++ b/.github/workflows/pulumi-deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: dns
+        working-directory: infra
         
     steps:
       - uses: actions/checkout@v4
