Touch go or hugo version should trigger CI checks

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - 'rnp/**'
       - '.github/workflows/pr-ci.yml'
+      - '.go-version'
+      - '.hugo-version'
 
 jobs:
   build-and-test:
